--- a/index.html
+++ b/index.html
@@ -31,51 +31,55 @@
     </script>
 </head>
 
-<body>
+<body class="background">
     <section id="title">
-        <nav class="navbar navbar-expand-lg navbar-color navbar-dark">
-            <a class="navbar-brand" href="index.html">Hi, there!</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about_me">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">My Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Hi, there!</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about_me">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skills">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="projects.html">My Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
         </nav>
-        <div class="container-sm center">
+        <div class="center">
             <div class="welcome">
                 <h1>Hi, My name is Agata.</h1>
                 <p>Web Developer</p>
             </div>
-            <img id="blueshape" , src="images/blueshape.png" ; alt="Decoration">
-            <img id="welcome_photo" , src="images/photo.png" ; alt="Profile picture">
+            <img id="blueshape" , src="images/welcome_page.png" ; alt="Decoration">
         </div>
     </section>
     <div class="container-sm center" id="about_me">
         <img id="about_img" , src="images/about.png" ; alt="About me"><br>
-        <h2">About me</h2>
+        <h2>About me</h2>
         <p>If you wanna know me</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit
             anim id est laborum.</p>
         <a href="education.html" class="right">
-            <p>More about my education</p>
+            More about my education
         </a>
     </div>
 
@@ -86,14 +90,35 @@
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.</p>
+            <div class="row skill_row left">
+                <div class="col-sm-4">
+                    <p>HTML </p>
+                    <p>CSS</p>
+                    <p>JAVASCRIPT</p>
+                    <p>Bootstrap</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>React</p>
+                    <p>Node.JS</p>
+                    <p>Angular</p>
+                    <p>Canva</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>jQuery</p>
+                    <p>Mongodb</p>
+                    <p>Design patterns</p>
+                    <p>Github</p>
+                </div>
+        </div>
         <a href="projects.html" class="right">
-            <p>More about my projects</p>
+            More about my projects
         </a>
     </div>
 
     <div class="container-sm">
-
         <h2>My Job Experience </h2>
+            <div class="row left">
+                <div class="col-8">    
         <div class="row">
             <div class="col-3">
                 <p>21 / 03 / 2021</p>
@@ -134,26 +159,33 @@
             <div class="col-9">
                 <p>Software Development Academy - Java </p>
             </div>
-
-            <img class="position-absolute end-0" id="backpack_img" , src="images/job.png" ; alt="backpack">
         </div>
     </div>
+    <div class="col-4">
+        <img id="backpack_img" src="images/job.png" ; alt="backpack">
+    </div>
+</div>
+</div>
     <div class="container-sm">
         <h2>My hobbies </h2>
-        <img id="pencil_img" , src="images/pencil.png" ; alt="pencil">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        <div class="row">
+            <div class="col-2"> 
+        <img id="pencil_img" , src="images/pencil.png" ; alt="pencil"></div>
+        <div class="col-10"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+            anim id est laborum.</p></div>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            <div class="col-10"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
-            <img id="pc_img" , src="images/pc.png" ; alt="Desktop"></p>
-    </div>
+            anim id est laborum.</p></div>
+            <div class="col-2"><img id="pc_img" , src="images/pc.png" ; alt="Desktop"></div>
+        
+        </div>
+        </div>
     <br>
     <br>
 
