--- a/projects.html
+++ b/projects.html
@@ -32,46 +32,56 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-color navbar-dark">
-        <a class="navbar-brand" href="index.html">Hi, there!</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#about_me">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="projects.html">My Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#skills">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#contact">Contact</a>
-                </li>
-            </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Hi, there!</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about_me">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">My Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
     </nav>
     <div class="container-sm">
         <h2> Some of my projects</h2>
         <h3>Websites</h3>
-        <div class="col-lg-3 col-md-4 col-sm-6"><img class="projects" src="images/project.png" alt=""/></div>
+        <div class="col-lg-3 col-md-4 col-sm-6"><img class="projects" src="images/project.png" alt="" /></div>
         <h3>Design</h3>
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://www.canva.com/design/DAEnYXknqaU/9TnoCoA_xEYmyEkjjOd5kA/view"><img class="projects" src="images/AnimalCare.gif" alt="Animal Care and Adoption"/></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://www.canva.com/design/DAEnkuq_PB4/Uz0A2SWZfQSpfB6bYAAhTg/view"><img class="projects" src="images/savetheocean.gif" alt="Save the Ocean"/></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://www.canva.com/design/DAEnGgN2PcM/DshDjMqp0aHDiA4nTjH_fA/view"><img class="projects" src="images/coffee.gif" alt="Coffee Time!"/></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a><img class="projects" src="images/project.gif" alt="deskription"/></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEnYXknqaU/9TnoCoA_xEYmyEkjjOd5kA/view"><img class="projects"
+                        src="images/AnimalCare.gif" alt="Animal Care and Adoption" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEnkuq_PB4/Uz0A2SWZfQSpfB6bYAAhTg/view"><img class="projects"
+                        src="images/savetheocean.gif" alt="Save the Ocean" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEnGgN2PcM/DshDjMqp0aHDiA4nTjH_fA/view"><img class="projects"
+                        src="images/coffee.gif" alt="Coffee Time!" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a><img class="projects" src="images/project.gif"
+                        alt="deskription" /></a></div>
         </div>
         <h3>Digital Art</h3>
         <div class="row">
-        <div class="col-lg-3 col-md-4 col-sm-6"><img class="projects" src="images/charleeprof.png" alt="OC Charlee"/></div>
-        <div class="col-lg-3 col-md-4 col-sm-6"><img class="projects" src="images/noname.png" alt="OC Sam"/></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><img class="projects" src="images/charleeprof.png"
+                    alt="OC Charlee" /></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><img class="projects" src="images/noname.png" alt="OC Sam" /></div>
+        </div>
     </div>
-</div>
     <div class="bottom_container">
         <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i class="fab fa-linkedin"></i> linkedIn</a> <a
             href="https://github.com/AgataJacyk"><i class="fab fa-github-square"></i> github </a> <a
