Some important changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,25 +41,25 @@
     <section id="title">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Hi, there!</a>
+                <a class="navbar-brand" href="index.html"><img src="favicon-32x32.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#about_me">About Me</a>
+                            <a class="nav-link" href="index.html#about_me">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#skills">Skills</a>
+                            <a class="nav-link" href="index.html#skills">Skills</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html">My Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
+                            <a class="nav-link" href="index.html#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -61,7 +67,7 @@
         <div class="center">
             <div class="welcome">
                 <h1>Hi, My name is Agata.</h1>
-                <p>Web Developer</p>
+                <p>FRONTEND DEVELOPER</p>
             </div>
             <img id="blueshape" , src="images/welcome_page.png" ; alt="Decoration">
         </div>
@@ -69,123 +75,139 @@
     <div class="container-sm center" id="about_me">
         <img id="about_img" , src="images/about.png" ; alt="About me"><br>
         <h2>About me</h2>
-        <p>If you wanna know me</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit
-            anim id est laborum.</p>
-        <a href="education.html" class="right">
-            More about my education
-        </a>
+        <p>I started my adventure with programming when I was 12 years old. I dealt with the graphic design on internet
+            forums. I could spend long hours staring at the code, choosing the right colors, fonts and details. I was
+            doing it purely as a hobby, and to be honest at the time, I didn't think a career in programming was
+            possible for me. I had a vision of many professions before me, such as a tattoo artist, vet or dentist, and
+            I was wading towards them. I devoted far too much time to the goal, not to what I really enjoyed, but I
+            think nothing happens without a reason.
+            How my path to the place where I am today looked like made me aware and "who i am" a lot.
+            <br>Finally, I feel like I'm in the right place and I'm developing in a field that really interests me.</p>
+        <p>If you want to know anything about me, <b>ask me</b>. Contact me is <b>at the bottom of this page</b>.</p>
+        <p class="text-end"><a href="education.html">
+                More about my education
+            </a></p>
     </div>
 
     <div class="container-sm center" id="skills">
         <h2>Skills </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
-            <div class="row skill_row left">
-                <div class="col-sm-4">
-                    <p>HTML </p>
-                    <p>CSS</p>
-                    <p>JAVASCRIPT</p>
-                    <p>Bootstrap</p>
-                </div>
-                <div class="col-sm-4">
-                    <p>React</p>
-                    <p>Node.JS</p>
-                    <p>Angular</p>
-                    <p>Canva</p>
-                </div>
-                <div class="col-sm-4">
-                    <p>jQuery</p>
-                    <p>Mongodb</p>
-                    <p>Design patterns</p>
-                    <p>Github</p>
-                </div>
+        <p>In 2020, I started studying at the Software Development Academy on the FullStack Java developer course. It
+            was then that I began to grasp the basics of programming and develop myself in programming. I decided that
+            Frontend gives me more pleasure than pure Java, and despite the ongoing course, I started to develop more in
+            this direction. Below is a list of some of the skills I have learned.</p>
+        <div class="row skill_row left">
+            <div class="col-sm-4">
+                <p><b>HTML 5</b></p>
+                <p><b>CSS 3</b></p>
+                <p><b>JavaScript ES6</b></p>
+                <p><b>Bootstrap 4 / 5</b></p>
+                <p><b>DOM Manipulation</b></p>
+            </div>
+            <div class="col-sm-4">
+                <p><b>React.js</b></p>
+                <p><b>Node.js</b></p>
+                <p><b>Web Design</b></p>
+                <p><b>Angular</b></p>
+                <p><b>Canva</b></p>
+            </div>
+            <div class="col-sm-4">
+                <p><b>jQuery</b></p>
+                <p><b>Mongodb</b></p>
+                <p><b>Design patterns</b></p>
+                <p><b>SQL</b></p>
+                <p><b>Github</b></p>
+            </div>
         </div>
-        <a href="projects.html" class="right">
-            More about my projects
-        </a>
+        <p class="text-end"><a href="projects.html" class="right">
+                More about my projects
+            </a></p>
     </div>
 
     <div class="container-sm">
         <h2>My Job Experience </h2>
-            <div class="row left">
-                <div class="col-8">    
-        <div class="row">
-            <div class="col-3">
-                <p>21 / 03 / 2021</p>
+        <div class="row left">
+            <div class="col-7">
+                <div class="row">
+                    <div class="col-4">
+                        <p>10 / 2020 - 06 / 2021</p>
+                    </div>
+                    <div class="col-7">
+                        <p> Excellent Office</p>
+                    </div>
+                    <div class="col-4">
+                        <p>08 / 2019 - 10 / 2019 </p>
+                    </div>
+                    <div class="col-7">
+                        <p>Old Town Brewery Jan Olbracht</p>
+                    </div>
+                    <div class="col-4">
+                        <p>04 / 2018 - 05 / 2018</p>
+                    </div>
+                    <div class="col-7">
+                        <p> Krowarzywa Vegan Burger</p>
+                    </div>
+                    <div class="col-4">
+                        <p>09 / 2017 - 02 / 2018</p>
+                    </div>
+                    <div class="col-7">
+                        <p>Tattoo shop Intruz Ink</p>
+                    </div>
+                </div>
+                <h3>Volunteer</h3>
+                <div class="row">
+                    <div class="col-4">
+                        <p>03 / 2018 - 09 / 2019</p>
+                    </div>
+                    <div class="col-7">
+                        <p>Otwarte Klatki Animal Charity</p>
+                    </div>
+                    <div class="col-4">
+                        <p>09 / 2014
+                            - 10 / 2016</p>
+                    </div>
+                    <div class="col-7">
+                        <p>Animal Shelter in Torun</p>
+                    </div>
+                </div>
+                <p class="text-end"><a href="index.html">
+                        My CV
+                    </a></p>
             </div>
-            <div class="col-9">
-                <p> WSB University in Gdansk - Informatics - Specialisation: Frontend Developer</p>
-            </div>
-            <div class="col-3">
-                <p>21 / 03 / 2021</p>
-            </div>
-            <div class="col-9">
-                <p> WSB University in Gdansk - Informatics - Specialisation: Frontend Developer</p>
-            </div>
-            <div class="col-3">
-                <p>21 / 03 / 2021</p>
-            </div>
-            <div class="col-9">
-                <p> WSB University in Gdansk - Informatics - Specialisation: Frontend Developer</p>
-            </div>
-            <div class="col-3">
-                <p>21 / 03 / 2021</p>
-            </div>
-            <div class="col-9">
-                <p> WSB University in Gdansk - Informatics - Specialisation: Frontend Developer</p>
-            </div>
-        </div>
-        <h3>Volunteer</h3>
-        <div class="row">
-            <div class="col-3">
-                <p>15 / 08 / 2021</p>
-            </div>
-            <div class="col-9">
-                <p>Software Development Academy - Java </p>
-            </div>
-            <div class="col-3">
-                <p>15 / 08 / 2021</p>
-            </div>
-            <div class="col-9">
-                <p>Software Development Academy - Java </p>
+            <div class="col-5">
+                <img id="backpack_img" src="images/job.png" ; alt="backpack">
             </div>
         </div>
     </div>
-    <div class="col-4">
-        <img id="backpack_img" src="images/job.png" ; alt="backpack">
-    </div>
-</div>
-</div>
     <div class="container-sm">
         <h2>My hobbies </h2>
         <div class="row">
-            <div class="col-2"> 
-        <img id="pencil_img" , src="images/pencil.png" ; alt="pencil"></div>
-        <div class="col-10"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p></div>
+            <div class="col-2">
+                <img id="pencil_img" , src="images/pencil.png" ; alt="pencil"></div>
+            <div class="col-10">
+                <p>Ever since I can remember, I've loved <b>drawing</b>. As a little girl, I used to scribble everything
+                    I could (seriously). My passion has developed over many years from <b>drawing, through various types
+                        of paints and other artistic materials</b>, to <b>digital art</b>, which I started to develop
+                    this year. for some time I studied the <b>art</b> of tattooing, which also contributed to my sense
+                    of aesthetics and taught me the correct composition in various forms.
+                    I think that I still miss a lot of Michelangelo or Picasso, but for sure it is one of my favorite
+                    forms of self-expression.</p>
+            </div>
 
-            <div class="col-10"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p></div>
+            <div class="col-10">
+                <p>I have already mentioned that <b>programming</b> was my passion but what was developing at the same
+                    time was <b>writing</b>. I've always had a vivid <b>imagination</b> full of ideas (and fortunately
+                    there are still quite a few of them). I loved <b>creating</b> amazing stories of imaginary
+                    characters, plots on which you could build a pretty good movie and describe their everyday life in
+                    far too long essays. I thought about writing a book many times, but in the end I used the
+                    opportunities provided by <b>PBF (play by forum)</b> forums to create long stories together with
+                    other <b>people</b>. By the way, it was thanks to these people that I started designing websites and
+                    I gained the courage to show my works to others. I learned to accept constructive criticism and
+                    correct the mistakes pointed out.</p>
+            </div>
             <div class="col-2"><img id="pc_img" , src="images/pc.png" ; alt="Desktop"></div>
-        
+
         </div>
-        </div>
+    </div>
     <br>
     <br>
 
@@ -194,20 +216,28 @@
     <div class="container-sm" id="contact">
         <h2>Stay in Touch!</h2>
         <div class="row">
-            <div class="col-6">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="col-5">
+                <p><b>Thank you for your time</b> reviewing my website. If you think that my skills and character
+                    correspond to the conditions prevailing in the company, I will be very glad if you <b>contact</b>
+                    one of the indicated forms. In addition, <b>I will be grateful for every tip for improving</b> my
+                    website, as I wrote earlier, I am at the beginning of my path with programming, so any comments on
+                    improving the code will be a <b>valuable lesson</b>.
+                    <br>Have a nice day!</p>
             </div>
             <div class="col-2 right">
-                <p>LinkedIn <i class="fab fa-linkedin"></i> </p>
-                <p>GitHub <i class="fab fa-github-square"></i> </p>
-                <p>GMail <i class="far fa-envelope"></i> </p>
-                <p>My CV <i class="far fa-address-card"></i></p>
+                <a href="https://www.linkedin.com/in/agata-jacyk-486259219/">
+                    <p><b>LinkedIn </b> <i class="fab fa-linkedin"></i> </p>
+                    <a href="https://github.com/AgataJacyk">
+                        <p><b>GitHub </b> <i class="fab fa-github-square"></i> </p>
+                    </a>
+                    <a href="mailto:agatajacyk.webdeveloper@gmail.com">
+                        <p><b>GMail </b> <i class="far fa-envelope"></i> </p>
+                    </a>
+                    <a>
+                        <p><b>(+48) 661-470-335</b> <i class="fas fa-phone-square"></i></p>
+                    </a>
             </div>
-            <div class="col-4">
+            <div class="col-5">
                 <img id="contact_img" , src="images/contact.png">
             </div>
         </div>
@@ -216,10 +246,10 @@
         <div class="bottom_container">
             <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i class="fab fa-linkedin"></i> linkedIn</a> <a
                 href="https://github.com/AgataJacyk"><i class="fab fa-github-square"></i> github </a> <a
-                href="agatajacyk.webdeveloper@gmail.com"><i class="far fa-envelope"></i> gmail </a>
+                href="mailto:agatajacyk.webdeveloper@gmail.com"><i class="far fa-envelope"></i> gmail </a>
             <br>
             <br>
-            <p><i class="far fa-copyright"></i> Copyrights Agata Jacyk</p>
+            <p><a><i class="far fa-copyright"> Copyrights Agata Jacyk</i></a></p>
         </div>
     </footer>
 </body>
