--- a/education.html
+++ b/education.html
@@ -12,11 +12,20 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&family=Montserrat&display=swap"
         rel="stylesheet">
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/e31afff6bf.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
@@ -30,36 +39,36 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Hi, there!</a>
+            <a class="navbar-brand" href="index.html"><img src="favicon-32x32.png"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about_me">About Me</a>
+                        <a class="nav-link" href="index.html#about_me">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
+                        <a class="nav-link" href="index.html#skills">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="projects.html">My Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
     </nav>
 
-    
+
     <div class="container-sm">
         <h2>Education </h2>
         <div class="row left">
             <div class="col-8">
-
+                <h3>University</h3>
                 <div class="row">
                     <div class="col-3">
                         <p>21 / 03 / 2021</p>
@@ -71,7 +80,7 @@
                 <h3>Programming Classes</h3>
                 <div class="row">
                     <div class="col-3">
-                        <p>15 / 08 / 2021</p>
+                        <p>15 / 08 / 2020 - 20 / 03 / 2021</p>
                     </div>
                     <div class="col-9">
                         <p>Software Development Academy - Java </p>
@@ -80,23 +89,30 @@
                 </div>
                 <div class="row">
                     <div class="col-3">
-                        <p>15 / 08 / 2021</p>
+                        <p>13 / 06 / 2021</p>
+                    </div>
+                    <div class="col-9">
+                        <p>Java Programming Masterclass covering Java 11 & Java 17 - Tim Buchalka</p>
+                    </div>
+                    <div class="col-3">
+                        <p>27 / 07 / 2021</p>
                         </th>
                     </div>
                     <div class="col-9">
                         <p> The Complete 2021 Web Development Bootcamp - Dr. Angela Yu</p>
                     </div>
                     <div class="col-3">
-                        <p>15 / 08 / 2021</p>
+                        <p>1 / 07 / 2021</p>
                     </div>
                     <div class="col-9">
                         <p>Programming in JavaScript - Bartłomiej Borowczyk</p>
                     </div>
                     <div class="col-3">
-                        <p>15 / 08 / 2021</p>
+                        <p>27 / 08 / 2021</p>
                     </div>
                     <div class="col-9">
-                        <p>Java Programming Masterclass covering Java 11 & Java 17 - Tim Buchalka</p>
+                        <p> Complete Web & Mobile Designer in 2021: UI/UX, Figma, +more - Andrei Neagoie, Daniel
+                            Schifano</p>
                     </div>
                 </div>
                 <h3>Additional Activities</h3>
@@ -108,7 +124,7 @@
                         <p>100 days of design</p>
                     </div>
                     <div class="col-3">
-                        <p>15 / 08 / 2021</p>
+                        <p>25 / 08 / 2021</p>
                     </div>
                     <div class="col-9">
                         <p>Five Minute Korean for Beginners</p>
@@ -119,6 +135,15 @@
                 <img id="books" src="images/education.png" ; alt="books">
             </div>
         </div>
+    </div>
+
+    <div class="bottom_container">
+        <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i class="fab fa-linkedin"></i> linkedIn</a> <a
+            href="https://github.com/AgataJacyk"><i class="fab fa-github-square"></i> github </a> <a
+            href="mailto:agatajacyk.webdeveloper@gmail.com"><i class="far fa-envelope"></i> gmail </a>
+        <br>
+        <br>
+        <p><i class="far fa-copyright"></i> Copyrights Agata Jacyk</p>
     </div>
 </body>
 
