--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,12 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,25 +40,25 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Hi, there!</a>
+            <a class="navbar-brand" href="index.html"><img src="favicon-32x32.png"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about_me">About Me</a>
+                        <a class="nav-link" href="index.html#about_me">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
+                        <a class="nav-link" href="index.html#skills">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="projects.html">My Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -72,20 +78,35 @@
             <div class="col-lg-3 col-md-4 col-sm-6"><a
                     href="https://www.canva.com/design/DAEnGgN2PcM/DshDjMqp0aHDiA4nTjH_fA/view"><img class="projects"
                         src="images/coffee.gif" alt="Coffee Time!" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a><img class="projects" src="images/project.gif"
-                        alt="deskription" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view?website#4:lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit"><img
+                        class="projects" src="images/icecream.gif" alt="Ice Cream Shop" /></a></div>
         </div>
         <h3>Digital Art</h3>
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6"><img class="projects" src="images/charleeprof.png"
-                    alt="OC Charlee" /></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><img class="projects" src="images/noname.png" alt="OC Sam" /></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipOjg8B_vLpY6-0yARcOq_QyuhoOa4zMECDbfGoz"><img
+                        class="projects_art" src="images/charleeprof.png" alt="OC Charlee" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipO9WwPT3h9LDfR8KhMoCQ4XShjSHagFZu9IWxSs"><img
+                        class="projects_art" src="images/noname.png" alt="OC Sam" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipNNs47EIEdxQpsc_30QU04_ZrFmdCkjNegroSU8"><img
+                        class="projects_art" src="images/1.jpg" alt="Girl" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipOHYBjWyeddnqCgUepxU7uGnFMkrEYuaFG80RQx"><img
+                        class="projects_art" src="images/5.jpg" alt="Wizard" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipMl5HATImT29f_sCc9Etj9DfOdkSZJ1_mNaM-Kz"><img
+                        class="projects_art" src="images/2.jpg" alt="Forest" /></div>
         </div>
+    </div>
+    </div>
     </div>
     <div class="bottom_container">
         <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i class="fab fa-linkedin"></i> linkedIn</a> <a
             href="https://github.com/AgataJacyk"><i class="fab fa-github-square"></i> github </a> <a
-            href="agatajacyk.webdeveloper@gmail.com"><i class="far fa-envelope"></i> gmail </a>
+            href="mailto:agatajacyk.webdeveloper@gmail.com"><i class="far fa-envelope"></i> gmail </a>
         <br>
         <br>
         <p><i class="far fa-copyright"></i> Copyrights Agata Jacyk</p>
