--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
     <div class="container-sm">
         <h2> Some of my projects</h2>
         <h3>Websites</h3>
-        <div class="col-lg-3 col-md-4 col-sm-6"><img class="projects" src="images/project.png" alt="" /></div>
+        <div class="col-lg-3 col-md-4 col-sm-6"><a href="index.html"><img class="projects" src="images/mypage.gif" alt="MyPage" /></a></div>
         <h3>Design</h3>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6"><a
