--- a/projects.html
+++ b/projects.html
@@ -84,6 +84,29 @@
             <div class="col-lg-3 col-md-4 col-sm-6"><a
                     href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view?website#4:lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit"><img
                         class="projects" src="images/icecream.gif" alt="Ice Cream Shop" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view?website#4:contact"><img
+                        class="projects" src="images/mountain.gif" alt="monstera" /></a></div>
+        </div>
+        <div class="row">
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
+                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view"><img
+                        class="mobile" src="images/bedtime.gif" alt="bedtime stories" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
+                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
+                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
+                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
+                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
         </div>
         <h3>Digital Art</h3>
         <div class="row">
