--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
                     href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view?website#4:lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit"><img
                         class="projects" src="images/icecream.gif" alt="Ice Cream Shop" /></a></div>
             <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view?website#4:contact"><img
+                    href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view?website#4:explore"><img
                         class="projects" src="images/mountain.gif" alt="monstera" /></a></div>
         </div>
         <div class="row">
