--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     </script>
 </head>
 
-<body>
+<body style="background-image: url(images/backdropimg.jpeg);">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img src="favicon-32x32.png"></a>
@@ -55,84 +55,94 @@
                         <a class="nav-link" href="index.html#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">My Projects</a>
+                        <a class="nav-link" href="projects.html" target="blank">My Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Contact</a>
+                        <a class="nav-link" href="education.html" target="blank">My Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cv.html" target="blank">CV</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#contact">Contact <i class="far fa-envelope"></i> </a>
                     </li>
                 </ul>
             </div>
     </nav>
-    <div class="container-sm">
-        <h2> Some of my projects</h2>
-        <h3>Websites</h3>
-        <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="index.html"><img class="projects" src="images/mypage.gif"
-                        alt="MyPage" /></a></div>
-        </div>
-        <h3>Design</h3>
-        <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://www.canva.com/design/DAEnYXknqaU/9TnoCoA_xEYmyEkjjOd5kA/view"><img class="projects"
-                        src="images/AnimalCare.gif" alt="Animal Care and Adoption" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://www.canva.com/design/DAEnkuq_PB4/Uz0A2SWZfQSpfB6bYAAhTg/view"><img class="projects"
-                        src="images/savetheocean.gif" alt="Save the Ocean" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://www.canva.com/design/DAEnGgN2PcM/DshDjMqp0aHDiA4nTjH_fA/view"><img class="projects"
-                        src="images/coffee.gif" alt="Coffee Time!" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view?website#4:lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit"><img
-                        class="projects" src="images/icecream.gif" alt="Ice Cream Shop" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view?website#4:explore"><img
-                        class="projects" src="images/mountain.gif" alt="monstera" /></a></div>
-        </div>
-        <div class="row">
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
-                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view"><img
-                        class="mobile" src="images/bedtime.gif" alt="bedtime stories" /></a></div>
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
-                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
-                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
-                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"><img
-                        class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-        </div>
-        <h3>Digital Art</h3>
-        <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipOjg8B_vLpY6-0yARcOq_QyuhoOa4zMECDbfGoz"><img
-                        class="projects_art" src="images/charleeprof.png" alt="OC Charlee" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipO9WwPT3h9LDfR8KhMoCQ4XShjSHagFZu9IWxSs"><img
-                        class="projects_art" src="images/noname.png" alt="OC Sam" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipNNs47EIEdxQpsc_30QU04_ZrFmdCkjNegroSU8"><img
-                        class="projects_art" src="images/1.jpg" alt="Girl" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipOHYBjWyeddnqCgUepxU7uGnFMkrEYuaFG80RQx"><img
-                        class="projects_art" src="images/5.jpg" alt="Wizard" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipMl5HATImT29f_sCc9Etj9DfOdkSZJ1_mNaM-Kz"><img
-                        class="projects_art" src="images/2.jpg" alt="Forest" /></div>
+    <div class="middle_container">
+        <div class="container-sm">
+            <h2> Some of my projects</h2>
+            <h3>Websites</h3>
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6"><a href="index.html"><img class="projects"
+                            src="images/mypage.gif" alt="MyPage" /></a></div>
+            </div>
+            <h3>Design</h3>
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://www.canva.com/design/DAEnYXknqaU/9TnoCoA_xEYmyEkjjOd5kA/view" target="blank"><img
+                            class="projects" src="images/AnimalCare.gif" alt="Animal Care and Adoption" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://www.canva.com/design/DAEnkuq_PB4/Uz0A2SWZfQSpfB6bYAAhTg/view" target="blank"><img
+                            class="projects" src="images/savetheocean.gif" alt="Save the Ocean" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://www.canva.com/design/DAEnGgN2PcM/DshDjMqp0aHDiA4nTjH_fA/view" target="blank"><img
+                            class="projects" src="images/coffee.gif" alt="Coffee Time!" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view?website#4:lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit"
+                        target="blank"><img class="projects" src="images/icecream.gif" alt="Ice Cream Shop" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view?website#4:contact"
+                        target="blank"><img class="projects" src="images/mountain.gif" alt="monstera" /></a></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4"><a
+                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+                <div class="col-lg-2 col-md-3 col-sm-4"><a
+                        href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view" target="blank"><img
+                            class="mobile" src="images/bedtime.gif" alt="bedtime stories" /></a></div>
+                <div class="col-lg-2 col-md-3 col-sm-4"><a
+                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+                <div class="col-lg-2 col-md-3 col-sm-4"><a
+                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+                <div class="col-lg-2 col-md-3 col-sm-4"><a
+                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+                <div class="col-lg-2 col-md-3 col-sm-4"><a
+                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+            </div>
+            <h3 id="digital_art">Digital Art</h3>
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipOjg8B_vLpY6-0yARcOq_QyuhoOa4zMECDbfGoz"
+                        target="blank"><img class="projects_art" src="images/charleeprof.png" alt="OC Charlee" /></a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipO9WwPT3h9LDfR8KhMoCQ4XShjSHagFZu9IWxSs"
+                        target="blank"><img class="projects_art" src="images/noname.png" alt="OC Sam" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipNNs47EIEdxQpsc_30QU04_ZrFmdCkjNegroSU8"
+                        target="blank"><img class="projects_art" src="images/1.jpg" alt="Girl" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipOHYBjWyeddnqCgUepxU7uGnFMkrEYuaFG80RQx"
+                        target="blank"><img class="projects_art" src="images/5.jpg" alt="Wizard" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipMl5HATImT29f_sCc9Etj9DfOdkSZJ1_mNaM-Kz"
+                        target="blank"><img class="projects_art" src="images/2.jpg" alt="Forest" /></div>
+            </div>
         </div>
     </div>
     </div>
     </div>
     <div class="bottom_container">
-        <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i class="fab fa-linkedin"></i> linkedIn</a> <a
-            href="https://github.com/AgataJacyk"><i class="fab fa-github-square"></i> github </a> <a
-            href="mailto:agatajacyk.webdeveloper@gmail.com"><i class="far fa-envelope"></i> gmail </a>
+        <a href="https://www.linkedin.com/in/agata-jacyk-486259219/" target="blank"><i class="fab fa-linkedin"></i>
+            linkedIn</a> <a href="https://github.com/AgataJacyk" target="blank"><i class="fab fa-github-square"></i>
+            github </a> <a href="mailto:agatajacyk.webdeveloper@gmail.com" target="blank"><i
+                class="far fa-envelope"></i> gmail </a>
         <br>
         <br>
         <p><i class="far fa-copyright"></i> Copyrights Agata Jacyk</p>
